samples/_failures_safe/1761661690_ebc457_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abdfc171.c: In function ‘main’:
./samples/SAFE/__tmp_abdfc171.c:152:5: error: ‘add’ undeclared (first use in this function)
  152 |     add
      |     ^~~
./samples/SAFE/__tmp_abdfc171.c:152:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_abdfc171.c:152:8: error: expected ‘;’ at end of input
  152 |     add
      |        ^
      |        ;
./samples/SAFE/__tmp_abdfc171.c:152:5: error: expected declaration or statement at end of input
  152 |     add
      |     ^~~
